add pyasn1 for some openssl helper functions fix man path in env-shell

--- a/env-shell.sh.in
+++ b/env-shell.sh.in
@@ -57,7 +57,7 @@ _LD_LIBRARY_PATH=$_I3PROD/lib:$_I3PROD/lib64:$LD_LIBRARY_PATH
 _DYLD_LIBRARY_PATH=$_I3PROD/lib:$_I3PROD/lib64:$DYLD_LIBRARY_PATH
 _PYTHONPATH=$_I3PROD/lib/python2.7/site-packages:$PYTHONPATH
 _PATH=$_I3PROD/bin:$_I3PROD/sbin:$PATH
-_MANPATH=$_I3PROD/man:$MANPATH
+_MANPATH=$_I3PROD/share/man:$MANPATH
 _GLOBUS_LOCATION=$_I3PROD
 _X509_CERT_DIR=$_GLOBUS_LOCATION/etc/grid-security/certificates
 
