--- a/Makefile.in
+++ b/Makefile.in
@@ -52,6 +52,7 @@ CONF_DEPS=$(foreach confdeps,$(notdir $(CONF_DEPS_URLS)),$(filter-out %.tar.gz %
 
 PYTHON_DEPS_URLS=http://pypi.python.org/packages/source/s/setuptools/setuptools-0.6c11.tar.gz \
 http://x2100.icecube.wisc.edu/downloads/iceprod2/pyOpenSSL-0.11.tar.gz \
+http://pypi.python.org/packages/source/p/pyasn1/pyasn1-0.1.3.tar.gz \
 http://x2100.icecube.wisc.edu/downloads/iceprod2/apsw-3.7.11.tar.gz \
 http://pypi.python.org/packages/source/l/lxml/lxml-2.3.4.tar.gz \
 http://pycurl.sourceforge.net/download/pycurl-7.19.0.tar.gz \
@@ -173,7 +174,7 @@ exportvars :
 
 
 makeprefixdir : 
-	mkdir -p $(PREFIX)
+	$(if $(wildcard $(PREFIX)),,$(foreach d,$(subst /, ,$(PREFIX)),mkdir $d && cd $d && ))
 
 tarball : 
 	$(eval curdir:=$(PWD))
@@ -182,7 +183,7 @@ tarball :
 core_tarball :
 	-chmod -Rf 755 $(PREFIX)/share/doc/p7zip
 	rm -rf $(PREFIX)/share/man $(PREFIX)/share/doc $(PREFIX)/share/gtk-doc $(PREFIX)/share/info $(PREFIX)/share/doxygen
-	$(if $(wildcard $(OLD_PREFIX)),,mkdir -p $(OLD_PREFIX))
+	$(if $(wildcard $(OLD_PREFIX)),,$(foreach d,$(subst /, ,$(OLD_PREFIX)),mkdir $d && cd $d && ))
 	cd $(PREFIX);tar -zcf $(OLD_PREFIX)/$(CORE_TARBALL_NAME) *
 	rm -rf $(PREFIX)
 
@@ -409,7 +410,8 @@ $(call getconfdir,nginx)/Makefile : nginx_download
 --without-http_map_module --without-http_fastcgi_module --without-http_memcached_module --without-mail_pop3_module \
 --without-mail_imap_module --without-mail_smtp_module --without-http_uwsgi_module --without-http_scgi_module \
 --without-http_upstream_ip_hash_module --with-pcre=../$(pcredirname) --add-module=../$(uploadmoddirname) \
---error-log-path=$(PREFIX)/var/log/nginx/error.log
+--error-log-path=$(PREFIX)/var/log/nginx/error.log --http-log-path=$(PREFIX)/var/log/nginx/access.log \
+--pid-path=$(PREFIX)/var/run/nginx.pid
 nginx_installclean : 
 	-rm -rf $(call getconfdir,nginx)/Makefile
 
@@ -549,12 +551,21 @@ $(ICEPROD) :
 env-shell : 
 	cp env-shell.sh $(PREFIX)/env-shell.sh
 
-misc_config : 
+misc_config : $(PREFIX)/etc/cacerts.crt
 	chmod -Rf 755 $(PREFIX)/share/doc/p7zip
-	mkdir -p $(PREFIX)/var/www
-	mkdir -p $(PREFIX)/var/lib/iceprod
-	mv $(PREFIX)/man $(PREFIX)/share/man
-	mv $(PREFIX)/logs $(PREFIX)/log
+	$(if $(wildcard $(PREFIX)/var),,mkdir $(PREFIX)/var)
+	$(if $(wildcard $(PREFIX)/var/www),,mkdir $(PREFIX)/var/www)
+	$(if $(wildcard $(PREFIX)/var/www_uploads),,mkdir $(PREFIX)/var/www_uploads)
+	$(if $(wildcard $(PREFIX)/var/run),,mkdir $(PREFIX)/var/run)
+	$(if $(wildcard $(PREFIX)/var/lib),,mkdir $(PREFIX)/var/lib)
+	$(if $(wildcard $(PREFIX)/var/lib/iceprod),,mkdir $(PREFIX)/var/lib/iceprod)
+	$(if $(wildcard $(PREFIX)/man),cp -rf $(PREFIX)/man $(PREFIX)/share/man;rm -rf $(PREFIX)/man,)
+	$(if $(wildcard $(PREFIX)/logs),rm -rf $(PREFIX)/logs)
+	$(if $(wildcard $(PREFIX)/log),,mkdir $(PREFIX)/log)
+
+# get the CA certificates from curl, which is a weekly update from Mozilla
+$(PREFIX)/etc/cacerts.crt : 	
+	$(WWW) $(WWWFLAGS) $(PREFIX)/etc/cacerts.crt http://curl.haxx.se/ca/cacert.pem
 
 
 # echo vars
@@ -567,4 +578,4 @@ cmds :
 	echo $(MAKECMDGOALS)
 
 
-.PHONY : clean distclean installclean build install install_build install_config install_core installcore_config exportvars iceprod_base iceprod_config iceprod_config_core $(ICEPROD) $(suffix _download,$(CONF_DEPS) $(PYTHON_DEPS)) $(suffix _configure, $(CONF_DEPS) $(PYTHON_DEPS))
+.PHONY : clean distclean installclean build install install_build install_config install_core installcore_config exportvars misc_config iceprod_base iceprod_config iceprod_config_core $(ICEPROD) $(suffix _download,$(CONF_DEPS) $(PYTHON_DEPS)) $(suffix _configure, $(CONF_DEPS) $(PYTHON_DEPS))
